--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=miniPawsChat
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=${FIREBASE_TEST_URL}
+spring.datasource.username=${FIREBASE_TEST_ID}
+spring.datasource.password=${FIREBASE_TEST_PW}
 
 # JPA 설정
 spring.jpa.hibernate.ddl-auto=update
